[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/enemy.png" type="Texture2D" id=1]
[ext_resource path="res://Scripts/EnemyAI.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[sub_resource type="OccluderPolygon2D" id=4]
cull_mode = 1
polygon = PackedVector2Array( 16, -16, 16, 16, -16, 16, -16, -16, 16, -16 )

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 11
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.6, 1.6 )
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Range" type="Area2D" parent="."]
collision_layer = 9

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
shape = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
